--- a/Vega/Vega/ClientApp/src/app/vehicle-form/vehicle-form.component.html
+++ b/Vega/Vega/ClientApp/src/app/vehicle-form/vehicle-form.component.html
@@ -1,34 +1,40 @@
 <h1>New Vehicle</h1>
-<form>
+<p>
+  {{ vehicle | json }}
+</p>
+<form #form="ngForm" (ngSubmit)="submit()" novalidate>
   <div class="form-group">
     <label for="make">Make</label>
-    <select id="make" class="form-control" (change)="onMakeChange()" [(ngModel)]="vehicle.make" name="make">
+    <select id="make" class="form-control" (change)="onMakeChange()" [(ngModel)]="vehicle.makeId" name="makeId" required #make="ngModel">
       <option value=""></option>
       <option *ngFor="let m of makes" value="{{ m.id }}">{{ m.name }}</option>
     </select>
+    <div class="alert alert-danger" *ngIf="make.touched && !make.valid">Please specify the Make .</div>
   </div>
   <div class="form-group">
     <label for="model">Model</label>
-    <select id="model" class="form-control">
+    <select id="model" class="form-control" [(ngModel)]="vehicle.modelId" name="modelId" required #model="ngModel">
       <option value=""></option>
       <option *ngFor="let m of models" value="{{ m.id }}">{{ m.name }}</option>
     </select>
+    <div class="alert alert-danger" *ngIf="model.touched && !model.valid">Please specify the Model .</div>
+
   </div>
 
   <p>Is this vehicule registered ?</p>
 
   <label for="registered" class="radio-inline">
-    <input type="radio" name="isRegistered" id="registered" value="true" />Yes
+    <input type="radio" name="isRegistered" id="registered" [value]="true" [(ngModel)]="vehicle.isRegistred" />Yes
   </label>
   <label for="notRegistered" class="radio-inline">
-    <input type="radio" name="isRegistered" id="notRegistered" value="false" />No
+    <input type="radio" name="isRegistered" id="notRegistered" [value]="false" [(ngModel)]="vehicle.isRegistred"/>No
   </label>
 
 
   <h2>Features</h2>
   <div *ngFor="let f of features" class="checkbox">
     <label for="{{ f.id }}">
-      <input type="checkbox" id="{{ f.id }}" /> {{ f.name }}
+      <input type="checkbox" id="{{ f.id }}" (change)="onFeatureToggle(f.id , $event)" [checked]="vehicle.features.includes(f.id)"/> {{ f.name }}
     </label>
   </div>
 
@@ -36,19 +42,22 @@
 
   <div class="form-grup">
     <label for="contactName">Name</label>
-    <input id="contactName" type="text" value="" class="form-control" />
+    <input id="contactName" type="text" value="" class="form-control" [(ngModel)]="vehicle.contact.name" name="contactName" required #contactName="ngModel" />
+    <div class="alert alert-danger" *ngIf="contactName.touched && !contactName.valid">Please specify the Contact Name .</div>
   </div>
   <div class="form-grup">
     <label for="contactPhone">Phone</label>
-    <input id="contactPhone" type="tel" value="" class="form-control" />
+    <input id="contactPhone" type="tel" value="" class="form-control" [(ngModel)]="vehicle.contact.phone" name="contactPhone" required #contactPhone="ngModel" />
+    <div class="alert alert-danger" *ngIf="contactPhone.touched && !contactPhone.valid">Please specify the Contact Phone .</div>
   </div>
   <div class="form-grup">
     <label for="contactEmail">Email</label>
-    <input id="contactEmail" type="email" value="" class="form-control" />
+    <input id="contactEmail" type="email" value="" class="form-control" [(ngModel)]="vehicle.contact.email" name="contactEmail"/>
   </div>
 
   <br />
 
-  <button class="btn btn-primary">Save</button>
+  <button class="btn btn-primary" >Save</button>
+  <button *ngIf="vehicle.id" class="btn btn-danger" (click)="delete()" type="button">Delete</button>
 
 </form>
