--- a/Vega/Vega/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Vega/Vega/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -11,33 +11,44 @@
         </div>
         <div class='clearfix'></div>
         <div class='navbar-collapse collapse' [ngClass]='{ "in": isExpanded }'>
-            <ul class='nav navbar-nav'>
-              <li [routerLinkActive]='["link-active"]' [routerLinkActiveOptions]='{ exact: true }'>
-                <a [routerLink]='["/home"]' (click)='collapse()'>
-                  <span class='glyphicon glyphicon-home'></span> Home
-                </a>
-              </li>
-              <li [routerLinkActive]='["link-active"]' [routerLinkActiveOptions]='{ exact: true }'>
-                    <a [routerLink]='["/vehicles"]' (click)='collapse()'>
-                        <span class='glyphicon glyphicon-list'></span> Vehicles
-                    </a>
-                </li>
-                <li [routerLinkActive]='["link-active"]' [routerLinkActiveOptions]='{ exact: true }'>
-                  <a [routerLink]='["/vehicles/new"]' (click)='collapse()'>
-                    <span class='glyphicon glyphicon-plus'></span> New Vehicle
-                  </a>
-                </li>
-                <li [routerLinkActive]='["link-active"]'>
-                    <a [routerLink]='["/counter"]' (click)='collapse()'>
-                        <span class='glyphicon glyphicon-education'></span> Counter
-                    </a>
-                </li>
-                <li [routerLinkActive]='["link-active"]'>
-                    <a [routerLink]='["/fetch-data"]' (click)='collapse()'>
-                        <span class='glyphicon glyphicon-th-list'></span> Fetch data
-                    </a>
-                </li>
-            </ul>
+          <ul class='nav navbar-nav'>
+            <li [routerLinkActive]='["link-active"]' [routerLinkActiveOptions]='{ exact: true }'>
+              <a [routerLink]='["/home"]' (click)='collapse()'>
+                <span class='glyphicon glyphicon-home'></span> Home
+              </a>
+            </li>
+
+            <li [routerLinkActive]="['link-active']">
+              <a (click)="auth.login()" *ngIf="!auth.loggedIn">
+                <span class='glyphicon glyphicon-user'></span> Login
+              </a>
+              <a (click)="auth.logout()" *ngIf="auth.loggedIn">
+                <span class='glyphicon glyphicon-user'></span> Logout
+              </a>
+            </li>
+
+
+            <li [routerLinkActive]='["link-active"]' [routerLinkActiveOptions]='{ exact: true }'>
+              <a [routerLink]='["/vehicles"]' (click)='collapse()'>
+                <span class='glyphicon glyphicon-list'></span> Vehicles
+              </a>
+            </li>
+            <li [routerLinkActive]='["link-active"]' [routerLinkActiveOptions]='{ exact: true }'>
+              <a [routerLink]='["/vehicles/new"]' (click)='collapse()'>
+                <span class='glyphicon glyphicon-plus'></span> New Vehicle
+              </a>
+            </li>
+            <li [routerLinkActive]='["link-active"]'>
+              <a [routerLink]='["/counter"]' (click)='collapse()'>
+                <span class='glyphicon glyphicon-education'></span> Counter
+              </a>
+            </li>
+            <li [routerLinkActive]='["link-active"]'>
+              <a [routerLink]='["/fetch-data"]' (click)='collapse()'>
+                <span class='glyphicon glyphicon-th-list'></span> Fetch data
+              </a>
+            </li>
+          </ul>
         </div>
     </div>
 </div>
